test/e2e/chainsaw/grpcroute-weight-before-header/assertions/grpcroute-with-header-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpcroute-wbh
  namespace: default
spec:
  (length(rules)): 2
  rules:
    - backendRefs:
        - name: argo-rollouts-stable-service
          (weight): 70
        - name: argo-rollouts-canary-service
          (weight): 30
    - name: canary-route1
      matches:
        - headers:
            - name: X-Canary
              type: Exact
              value: "true"
      backendRefs:
        - name: argo-rollouts-canary-service
