test/e2e/chainsaw/grpcroute-weight-before-header/assertions/rollout-healthy.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: grpcroute-wbh-rollout
  namespace: default
status:
  (phase == 'Healthy'): true
