test/e2e/chainsaw/grpcroute-weight-before-header/resources/grpcroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpcroute-wbh
  namespace: default
spec:
  parentRefs:
    - name: traefik-gateway
  rules:
    - backendRefs:
        - name: argo-rollouts-stable-service
          port: 80
        - name: argo-rollouts-canary-service
          port: 80
