test/e2e/chainsaw/grpcroute-weight-before-header/resources/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: grpcroute-wbh-rollout
  namespace: default
spec:
  replicas: 2
  strategy:
    canary:
      canaryService: argo-rollouts-canary-service
      stableService: argo-rollouts-stable-service
      trafficRouting:
        managedRoutes:
          - name: canary-route1
        plugins:
          argoproj-labs/gatewayAPI:
            grpcRoutes:
              - name: grpcroute-wbh
                useHeaderRoutes: true
            namespace: default
      steps:
        - setWeight: 30
        - setHeaderRoute:
            name: canary-route1
            match:
              - headerName: X-Canary
                headerValue:
                  exact: "true"
        - pause: {duration: 30s}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
        - name: rollouts-demo
          image: argoproj/rollouts-demo:red
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
